# pp-at1

./: README.md  app.py  content.py  graph.py  graphs.py  newsapi.py  newsapi_test.ipynb  newsdata.py  pyproject.toml  scraper.py  test.ipynb
tests/: test_gui.py  test_news.py  test_scraper.py
wip/: content.py  graph_test.ipynb  scrap_test.ipynb  scrap_test2.ipynb
