[tool.poetry]
name = "pp-at1"
version = "0.1.0"
description = "Python Programming Assignment"
authors = ["Martin Neloe <Martin.A.Neloe@student.edu.au>"]
readme = "README.md"
packages = [{include = "pp_at1"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.4"
requests = "^2.31.0"
pillow = "^10.3.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
